--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 <h1>MANEJO DE CABECERAS</h1>
 <a href="/cabeceras/cabeceras-request">Ir al servlet</a>
 <br>
-<a href="/cabeceras/productos.html">Ir a productos de la casa</a>
+<a href="/cabeceras/productos.html">Ir a productos de la casa con </a>
 <br>
 
 </body>
