--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,6 @@
 <br>
 <a href="/cabeceras/productos.html">Ir a productos de la casa con </a>
 <br>
-
+<a href="/cabeceras/login.html">Login</a>
 </body>
 </html>
